<resources>

    <string name="google_map_api_key">AIzaSyDTgy4jmcEOovYjNaBz1UFLd1O-974QsyU</string>
    <string name="app_name">SafeStreetApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">not registered?</string>
    <string name="register">REGISTER</string>
    <string name="already_registered">already registered?</string>
    <string name="bck_login">LOGIN</string>
    <string name="main_register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reg_password">Password</string>
    <string name="reg_username">Username</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="report_violation">Report Violation</string>
    <string name="statistics">Statistics</string>
    <string name="my_report">My Report</string>
    <string name="request_data">Request Data</string>
    <string name="street_no">Street No.</string>
    <string name="street_name">Street Name</string>
    <string name="street_number">No.</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="time_rep">10:23:00</string>
    <string name="date">10/10/2019</string>
    <string name="navigation_draw_open">Open Navigation Drawer</string>
    <string name="navigation_draw_close">Close Navigation Drawer</string>
    <string name="email">email</string>
    <string name="report_violation_btn">Report Violation</string>
    <string name="update_stats">Update Stats</string>
    <string name="_10_23">10:23</string>
    <string name="upload_image">Upload Image</string>
    <string name="logout">logout</string>
    <string name="disable_notifications">Disable Notifications</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="from_date">From Date:</string>
    <string name="date_stat">Date</string>
    <string name="time_stat">Time:</string>
    <string name="_1023">10:23</string>
    <string name="download_excel_file">Download Excel File</string>
    <string name="your_reports">Your Reports</string>
    <string name="type_of_violationUR">Type of Violation</string>
    <string name="streetUR">Street</string>
    <string name="UR">City</string>
    <string name="dateUR">Date</string>
    <string name="timeUR">Time</string>
    <string name="viol_typeUR">Viol Type</string>
    <string name="violationUR">Violation</string>
    <string name="locationUR">Location</string>
    <string name="city_stats">City</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="enter_address_city_or_zip_code">Enter Street, City or Zip Code</string>
</resources>
