<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".User_Reports">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/your_reports"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="#2196F3"
            android:layout_marginBottom="1dp"
            />
    </TableLayout>


    <TableLayout
        android:id="@+id/user_reports_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TableRow>
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/violationUR"
            android:textSize="20sp"
            android:layout_weight="1"
            android:gravity="center"
            android:textStyle="bold"
            android:background="#1FE227"
            android:layout_marginBottom="1dp" />
        <TextView
            android:layout_width="170dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/locationUR"
            android:gravity="center"
            android:background="#1FE227"
            android:layout_marginBottom="1dp"
            />
        <TextView
            android:layout_width="100dp"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/dateUR"
            android:gravity="center"
            android:background="#1FE227"
            android:layout_marginBottom="1dp"
            />

    </TableRow>

</TableLayout>


</LinearLayout>