<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/greyback">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/shield"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:padding="5dp"
        android:background="@drawable/edittexts">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/user"/>

        <EditText
            android:id="@+id/et_username"
            android:inputType="text"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:hint="@string/username" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="@drawable/edittexts">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:srcCompat="@drawable/lock"/>



        <EditText
            android:id="@+id/et_password"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:hint="@string/password" />


    </LinearLayout>

    <CheckBox android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enable Notifications"
        android:textColor="#ffffff"
        android:onClick="onCheckboxClicked"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonsl"
        android:text="@string/login"
        android:onClick="loginBtn"
        android:tooltipText="Login to Safestreet"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#ffffff"
            android:text="@string/not_registered"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:text="@string/register"
            android:tooltipText="Register an Account with Safestreet"/>


    </LinearLayout>



</LinearLayout>