<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Report_Violation"
    android:id="@+id/ac_rep_viol"
    android:fitsSystemWindows="true">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/greyback">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#752196F3"
            android:id="@+id/toolbar"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:elevation="4dp"/>

        <Button
            android:id="@+id/btn_take_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/camera"
            android:tooltipText="Take a Picture of Violation"/>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:background="@drawable/edittexts">

            <Button
                android:id="@+id/btn_get_loc"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/ic_location"
                android:tooltipText="Open Map"/>




            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/ic_magnify"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="#000"
                android:id="@+id/input_search"
                android:background="@drawable/edittexts"
                android:hint="@string/enter_address_city_or_zip_code"
                android:imeOptions="actionSearch"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:background="@drawable/edittexts"
            >

            <Button
                android:id="@+id/btn_date_rep"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_date"
                android:layout_marginRight="10dp"

                android:layout_marginTop="5dp"
                android:tooltipText="Pick the Date of the Violation"/>

            <TextView
                android:id="@+id/tv_date_rep"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:hint="@string/date"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                />


            <Button
                android:id="@+id/btn_time_rep"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_time"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:tooltipText="Pick a Time of the Violation"/>

            <TextView
                android:id="@+id/tv_time_rep"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:hint= "@string/_10_23"
                android:textSize="20sp"
                android:layout_marginTop="5dp"/>

        </LinearLayout>





        <ImageButton
            android:id="@+id/btn_upload"
            android:layout_width="360dp"
            android:layout_height="300dp"
            android:layout_marginTop="5dp"

            android:background="@drawable/ic_image"
            android:text="@string/upload_image"
            android:onClick="UploadBtn"
            android:tooltipText="Pick an Image of the violation"/>


        <Spinner
            android:id="@+id/viol_drop"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:tooltipText="Select the Type of Violation"/>




        <Button
            android:id="@+id/btn_report"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonsl"
            android:text="@string/report_violation_btn"
            android:onClick="ReportBtn"
            android:tooltipText="Report the Violation"/>




    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/sidebar_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/sidebar"
        app:menu="@menu/sidebar" />



</androidx.drawerlayout.widget.DrawerLayout>