<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statistics"
    android:id="@+id/ac_rep_viol"
    android:fitsSystemWindows="true">

    <LinearLayout



    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Statistics"
    android:background="@drawable/greyback">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#752196F3"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="4dp"/>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="17dp"
        android:padding="5dp"
        android:background="@drawable/edittexts"
        android:layout_marginLeft="75dp">

        <Button
            android:id="@+id/btn_get_loc"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_location" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/ic_magnify"
            android:layout_centerVertical="true"
            android:textSize="15sp"
            android:textColor="#000"
            android:id="@+id/input_search"
            android:background="@drawable/edittexts"
            android:hint="@string/enter_address_city_or_zip_code"
            android:imeOptions="actionSearch"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="@drawable/raduistop">

        <CheckBox android:id="@+id/checkboxdate"
            android:layout_height="30dp"
            android:layout_width="wrap_content"
            android:onClick="onCheckboxClickedDate"/>

        <TextView
            android:id="@+id/tv_date_rep"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:hint="@string/date_stat"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="17dp"
        android:padding="5dp"
        android:background="@drawable/radiusbottom">

        <Button
            android:id="@+id/btn_dates_rep"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/calendar2"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:tooltipText="Pick From Date"/>

        <TextView
            android:id="@+id/tv_dates_rep"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textSize="17sp"
            android:hint="@string/date"
            />
        <Button
            android:id="@+id/btn_datee_rep"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/calendar2"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"
            android:tooltipText="Pick Date Til"/>

        <TextView
            android:id="@+id/tv_datee_rep"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:textSize="17sp"
            android:hint="@string/date"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="20dp"
        android:padding="5dp"
        android:background="@drawable/raduistop">

    <CheckBox android:id="@+id/checkboxtime"
        android:layout_height="30dp"
        android:layout_width="wrap_content"
        android:onClick="onCheckboxClickedTime"/>
    <TextView
        android:id="@+id/tv_time_rep"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:hint="@string/time_stat"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="17dp"
        android:padding="5dp"
        android:background="@drawable/radiusbottom">


        <Button
            android:id="@+id/btn_timestart_rep"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/clock"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:tooltipText="Pick From Time"/>

        <TextView
            android:id="@+id/tv_timestart_rep"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:textSize="17sp"
            android:hint= "@string/_10_23" />

        <Button
            android:id="@+id/btn_timeend_rep"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/clock"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:tooltipText="Pick Time Til"/>

        <TextView
            android:id="@+id/tv_timeend_rep"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:textSize="17sp"
            android:hint= "@string/_10_23" />

    </LinearLayout>

    <!--<Spinner
        android:id="@+id/viol_drop"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>-->

    <com.anychart.AnyChartView
        android:layout_height="280dp"
        android:layout_width="380dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittexts"
        android:id="@+id/piechart_viol" />

    <Button
        android:id="@+id/btn_stats"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="140dp"
        android:background="@drawable/buttonsl"
        android:text="@string/update_stats"
        android:tooltipText="Get Statistics"
        android:onClick="UpdateStats"/>

</LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/sidebar_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/sidebar"
        app:menu="@menu/sidebar" />



</androidx.drawerlayout.widget.DrawerLayout>